--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
     </div>
  </div>
 
+    <!-- Footer -->
+
+    <div id="footer">
+      <div class="navbar navbar-default ">
+          <div class="container footer">
+              <p class="navbar-text pull-left">© Beehive - 2020, All rights reserved.</p>
+
+              <p class="pull-right "> <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"> <i class="fab fa-instagram"></i></a>
+              </p>
+          </div>
+
+      </div>
+  </div>
+
   
 
 
