--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div id="footer">
       <div class="navbar navbar-default ">
-          <div class="container footer">
+          <div class="container-fluid footer">
               <p class="navbar-text pull-left">© Beehive - 2020, All rights reserved.</p>
 
               <p class="pull-right "> <a href="#"><i class="fab fa-facebook-f"></i></a>
