privet office fixed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="sidebar-sticky">
             <div class="row elements">
 
-              <div class="subscription col-xs-3  active">
+              <div class="subscription col-xs-3  ">
                 <img alt='Subscription' src="./img/subscriptionImg.svg" />
                 <p>Subscription</p>
 
@@ -59,7 +59,7 @@
                 <p>Reservation</p>
 
               </div>
-              <div class="privateOffice col-xs-3 ">
+              <div class="privateOffice col-xs-3 activePage">
                 <img alt='Private Office' src="./img/privateOfficeImg.svg" />
                 <p>Privet Office</p>
 
