privet office, subscription, events: final

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   <div class="carousel-item active">
                     <div id="privet-office">
                       <div class="container-fluid ">
-                        <div class="row privet1 d-flex justify-content-around">
+                        <div class="row privet d-flex justify-content-around">
                           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 imgOffice">
                             <img class="imgPrivetOffice wow pulse" src="img/privetOffice.jpg">
                           </div>
@@ -146,7 +146,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="row privet2 d-flex justify-content-around">
+                        <div class="row privet d-flex justify-content-around">
                           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 imgOffice">
                             <img class="imgPrivetOffice wow pulse" src="img/privetOffice.jpg">
                           </div>
@@ -173,7 +173,7 @@
                     <div id="privet-office">
 
                       <div class="container-fluid ">
-                        <div class="row privet1 d-flex justify-content-around">
+                        <div class="row privet d-flex justify-content-around">
 
                           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 imgOffice">
                             <img class="imgPrivetOffice wow pulse" src="img/privetOffice.jpg">
@@ -196,7 +196,7 @@
                           </div>
                         </div>
 
-                        <div class="row privet2 d-flex justify-content-around">
+                        <div class="row privet d-flex justify-content-around">
 
                           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 imgOffice">
                             <img class="imgPrivetOffice wow pulse" src="img/privetOffice.jpg">
@@ -224,7 +224,7 @@
                   <div class="carousel-item">
                     <div id="privet-office">
                       <div class="container-fluid ">
-                        <div class="row privet1 d-flex justify-content-around">
+                        <div class="row privet d-flex justify-content-around">
                           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 imgOffice">
                             <img class="imgPrivetOffice wow pulse" src="img/privetOffice.jpg">
                           </div>
@@ -244,7 +244,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="row privet2 d-flex justify-content-around">
+                        <div class="row privet d-flex justify-content-around">
                           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 imgOffice">
                             <img class="imgPrivetOffice wow pulse" src="img/privetOffice.jpg">
                           </div>
