--- a/subscription.html
+++ b/subscription.html
@@ -77,7 +77,7 @@
                 <div class="row filterSubscription text-center d-flex justify-content-center">
                     <p class="col-6-lg ">Showing packages for : </p>
                     <div class="form-group col-6-lg ">
-                        <select class="form-control dropdown optionsBooking" id="Select">
+                        <select class="form-control" id="Select">
                             <option value="1" selected>Ar Riyadh Branch</option>
                             <option value="2">Tunisie</option>
                             <option value="3">Ar Riyadh</option>
@@ -101,7 +101,7 @@
                     </div>
                   </div>
 
-                  <div class="card p-3  container-fluid col-auto mb-3" >
+                  <div class="card p-3 container-fluid col-auto mb-3" >
                     <div class="card-body">
                       <h5 class="card-title">BASIC PACKAGE</h5>
                       
