--- a/events.html
+++ b/events.html
@@ -12,6 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
+  <!-- CSS Style -->
+  <link rel="stylesheet" href="./css/navbar.css" />
+  <link rel="stylesheet" href="./css/footer.css" />
+  <link rel="stylesheet" href="./css/sectionList.css" />
+  <link rel="stylesheet" href="./css/eventContent.css" />
+  <link rel="stylesheet" href="./css/globalStyle.css" />
+
+
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
   <title>Beehive</title>
 </head>
