--- a/subscription.html
+++ b/subscription.html
@@ -11,6 +11,12 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+  <!-- CSS Style -->
+  <link rel="stylesheet" href="./css/navbar.css" />
+  <link rel="stylesheet" href="./css/footer.css" />
+  <link rel="stylesheet" href="./css/sectionList.css" />
+  <link rel="stylesheet" href="./css/subscriptionContent.css" />
+  <link rel="stylesheet" href="./css/globalStyle.css" />
 
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
   <title>Beehive</title>
