--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
               <div class=" input-group" >
           
-                <div class="dateTxt">
+                <div class="dateTxt toDateTxt">
                   From
                 </div> 
             
@@ -103,7 +103,7 @@
             <div class="fromDate col-lg-4 col-md-5 col-sm-12 col-xs-12">
 
               <div class=" input-group " >
-                <div class="dateTxt">
+                <div class="dateTxt toDate">
                   To
                 </div> 
                  <input class="form-control"  style="background: white;" id="date" name="date" placeholder="MM/DD/YYYY" type="date"/>
