create navbar with signed in links

--- a/reservationDetails.html
+++ b/reservationDetails.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <!-- CSS Style -->
-  <link rel="stylesheet" href="./css/navbar.css" />
+  <link rel="stylesheet" href="./css/navbar/signOutLinks.css" />
   <link rel="stylesheet" href="./css/footer.css" />
   <link rel="stylesheet" href="./css/sectionList.css" />
   <link rel="stylesheet" href="./css/reservationDetails.css" />
