--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
   <!-- CSS Style -->
-  <link rel="stylesheet" href="./css/navbar.css" />
+  <link rel="stylesheet" href="./css/navbar/signOutLinks.css" />
   <link rel="stylesheet" href="./css/footer.css" />
   <link rel="stylesheet" href="./css/sectionList.css" />
   <link rel="stylesheet" href="./css/eventContent.css" />
