--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
   
 
   <!-- CSS Style -->
-  <link rel="stylesheet" href="./css/navbar.css" />
+  <link rel="stylesheet" href="./css/navbar/signInLinks.css" />
   <link rel="stylesheet" href="./css/footer.css" />
   <link rel="stylesheet" href="./css/profile.css" />
   <link rel="stylesheet" href="./css/globalStyle.css" />
@@ -37,16 +37,23 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
+
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <button type="button" class="btn btn-primary nav-link" data-toggle="modal"
-              data-target="#exampleModalCenter">
-              Login
-            </button>
+          <li class="nav-item minSize">
+            <a class="nav-link" href="#">Profile</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+          <li class="nav-item minSize">
+            <a class="nav-link" href="#">Logout</a>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Jones Doe
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#"><i class="fas fa-user"></i>Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i>Logout</a>
+            </div>
         </ul>
       </div>
     </nav>
