translate privet office page

--- a/AR/profile.html
+++ b/AR/profile.html
@@ -15,10 +15,9 @@
   
 
   <!-- CSS Style -->
-  <link rel="stylesheet" href="./css/navbar/signInLinks.css" />
-  <link rel="stylesheet" href="./css/footer.css" />
-  <link rel="stylesheet" href="./css/profile.css" />
-  <link rel="stylesheet" href="./css/globalStyle.css" />
+
+  <link rel="stylesheet" href="./style/profile.css" />
+
 
 
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
@@ -124,7 +123,7 @@
                 <div class="col-auto smallDeviceImg"> <img src="./img/eventImgProfil.png" class="eventImg" /></div>
                 <div class="col-auto">
                   <p>انتهاء الصلاحية</p>
-                  <p>2020 يناير</p>
+                  <p class="dateExpires">يناير 2020</p>
                 </div>
                 <div class="col-auto largeDeviceImg"> <img src="./img/eventImgProfil.png" class="eventImg" /></div>
               </div>
@@ -181,7 +180,7 @@
             </div>
 
 
-            <div class="reservPagination mr-auto row">
+            <div class="reservPagination ml-auto row">
               <div class="col-12">
                 <ul class="pagination ">
                   <li class="page-item page-pre"><a class="page-link" aria-label="previous page"
