--- a/AR/reservation.html
+++ b/AR/reservation.html
@@ -98,9 +98,9 @@
 
   <div id="content">
     <div class="container-fluid">
-      <div class="row">
+      <div class="row reservationContainer">
 
-        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 smallDeviceSectionList">
+        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 ">
           <div class="sidebar-sticky">
             <div class="row elements">
               <div class="subscription col-xs-3 ">
@@ -180,31 +180,6 @@
         </div>
 
 
-        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 largeDeviceSectionList">
-          <div class="sidebar-sticky">
-            <div class="row elements">
-              <div class="subscription col-xs-3 ">
-                <img alt='Subscription' src="./img/subscriptionImg.svg" />
-                <p>اشتراك</p>
-              </div>
-              <div class="reservation col-xs-3  activePage">
-                <img alt='Reservation' src="./img/reservationImg.svg" />
-                <p>حجز</p>
-              </div>
-              <div class="privateOffice col-xs-3 ">
-                <img alt='Private Office' src="./img/privateOfficeImg.svg" />
-                <p>مكتب خاص</p>
-              </div>
-              <div class="events col-xs-3 ">
-                <img alt='Events' src="./img/eventImg.svg" />
-                <p>الأحداث</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      
-
       </div>
     </div>
   </div>
@@ -215,12 +190,12 @@
  <div id="footer">
   <div class="navbar navbar-default ">
     <div class="container-fluid footer">
-      <p class="navbar-text pull-left smallDeviceFooter">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
+      <p class="navbar-text pull-left ">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
       <p class="pull-right "> <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"> <i class="fab fa-instagram"></i></a>
       </p>
-      <p class="navbar-text pull-left largeDeviceFooter">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
+      
     </div>
 
   </div>
