--- a/EN/profile.html
+++ b/EN/profile.html
@@ -15,10 +15,9 @@
   
 
   <!-- CSS Style -->
-  <link rel="stylesheet" href="./css/navbar/signInLinks.css" />
-  <link rel="stylesheet" href="./css/footer.css" />
-  <link rel="stylesheet" href="./css/profile.css" />
-  <link rel="stylesheet" href="./css/globalStyle.css" />
+
+  <link rel="stylesheet" href="./style/profile.css" />
+
 
 
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
