--- a/AR/blog.html
+++ b/AR/blog.html
@@ -174,12 +174,12 @@
   <div id="footer">
     <div class="navbar navbar-default ">
       <div class="container-fluid footer">
-        <p class="navbar-text pull-left smallDeviceFooter">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
+        <p class="navbar-text pull-left ">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
         <p class="pull-right "> <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"> <i class="fab fa-instagram"></i></a>
         </p>
-        <p class="navbar-text pull-left largeDeviceFooter">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
+       
       </div>
 
     </div>
