--- a/AR/reservationDetails.html
+++ b/AR/reservationDetails.html
@@ -12,12 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <!-- CSS Style -->
-  <link rel="stylesheet" href="./css/navbar/signOutLinks.css" />
-  <link rel="stylesheet" href="./css/footer.css" />
-  <link rel="stylesheet" href="./css/sectionList.css" />
-  <link rel="stylesheet" href="./css/reservationDetails.css" />
-  <link rel="stylesheet" href="./css/globalStyle.css" />
-  <link rel="stylesheet" href="./css/SignIn.css" />
+ 
+  <link rel="stylesheet" href="./style/reservationDetails.css" />
 
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
   <title>Beehive</title>
@@ -104,8 +100,8 @@
 
   <div id="content">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 smallDeviceSectionList">
+      <div class="row resDetailsContainer ">
+        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 ">
           <div class="sidebar-sticky">
             <div class="row elements">
               <div class="subscription col-xs-3 ">
@@ -138,7 +134,6 @@
           </div>
 
           <div class="row reservationCards d-flex justify-content-around text-center">
-
             <div class="card mx-auto">
               <img src="img/reservationImg1.jpg" class="card-img-top">
 
@@ -146,9 +141,6 @@
                 <h5 class="cardReservation-title">مساحة مفتوحة</h5>
                 <p>لمدة ساعة</p>
                 <p class="priceReservation">اليوم الساعة 11:00 مساءً</p>
-
-
-
               </div>
             </div>
 
@@ -240,29 +232,6 @@
         </div>
 
 
-        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 largeDeviceSectionList">
-          <div class="sidebar-sticky">
-            <div class="row elements">
-              <div class="subscription col-xs-3 ">
-                <img alt='Subscription' src="./img/subscriptionImg.svg" />
-                <p>اشتراك</p>
-              </div>
-              <div class="reservation col-xs-3  ">
-                <img alt='Reservation' src="./img/reservationImg.svg" />
-                <p>حجز</p>
-              </div>
-              <div class="privateOffice col-xs-3 activePage">
-                <img alt='Private Office' src="./img/privateOfficeImg.svg" />
-                <p>مكتب خاص</p>
-              </div>
-              <div class="events col-xs-3 ">
-                <img alt='Events' src="./img/eventImg.svg" />
-                <p>الأحداث</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
   </div>
@@ -273,12 +242,12 @@
   <div id="footer">
     <div class="navbar navbar-default ">
       <div class="container-fluid footer">
-        <p class="navbar-text pull-left smallDeviceFooter">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
+        <p class="navbar-text pull-left ">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
         <p class="pull-right "> <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"> <i class="fab fa-instagram"></i></a>
         </p>
-        <p class="navbar-text pull-left largeDeviceFooter">© خلية النحل - 2020 ، جميع الحقوق محفوظة </p>
+        
       </div>
 
     </div>
