--- a/EN/blog.html
+++ b/EN/blog.html
@@ -9,13 +9,12 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <!-- CSS Style -->
 
-  <link rel="stylesheet" href="./style/blog.css" />
 
+  <link rel="stylesheet" href="./css/en.css" />
 
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
   <title>Beehive</title>
@@ -48,7 +47,7 @@
   </div>
 
 
-  <!-- Modal : Sign In-->
+   <!-- Modal : Sign In-->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -84,12 +83,15 @@
 </div>
 
 
+
   <!-- Content : -->
 
   <!-- left Side Fix -->
 
   <div id="content">
     <div class="container-fluid">
+      <div id="blog">
+
       <div class="row">
         
         <div class="col-12 mx-sm-auto content">
@@ -147,6 +149,7 @@
 
       </div>
     </div>
+  </div>
   </div>
   </div>
 
