--- a/EN/branches.html
+++ b/EN/branches.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html id="branch" lang="en">
 
 <head>
   <!-- Required meta tags -->
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <!-- CSS Style -->
 
-  <link rel="stylesheet" href="./style/branches.css" />
+  <link rel="stylesheet" href="./css/en.css" />
 
  
 
@@ -21,7 +21,7 @@
   <title>Beehive</title>
 </head>
 
-<body>
+<body class="branch">
 
   <!-- Navbar -->
 
@@ -89,6 +89,12 @@
 
   <div id="content">
     <div class="container-fluid">
+
+      <div id="branches">
+
+    
+
+   
       <div class="row">
  
 
@@ -153,6 +159,8 @@
       </div>
     </div>
   </div>
+  </div>
+
   </div>
 
   <!-- Footer -->
