--- a/EN/events.html
+++ b/EN/events.html
@@ -14,7 +14,7 @@
 
   <!-- CSS Style -->
  
-  <link rel="stylesheet" href="./style/event.css" />
+  <link rel="stylesheet" href="./css/en.css" />
 
 
 
@@ -90,6 +90,9 @@
 
   <div id="content">
     <div class="container-fluid">
+      <div id="event">
+
+  
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2">
           <div class="sidebar-sticky">
@@ -332,12 +335,14 @@
               </div>
             </div>
           </div>
+          
         </div>
 
         <!-- */ right side -->
 
       </div>
     </div>
+  </div>
   </div>
   </div>
 
