--- a/EN/profile.html
+++ b/EN/profile.html
@@ -16,7 +16,7 @@
 
   <!-- CSS Style -->
 
-  <link rel="stylesheet" href="./style/profile.css" />
+  <link rel="stylesheet" href="./css/en.css" />
 
 
 
@@ -65,6 +65,9 @@
 
   <div id="content">
     <div class="container-fluid">
+      <div id="profile">
+
+      
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-3">
           <div class="sidebar-sticky">
@@ -190,6 +193,7 @@
 
       </div>
     </div>
+  </div>
   </div>
   </div>
 
