--- a/EN/reservation.html
+++ b/EN/reservation.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <!-- CSS Style -->
 
-  <link rel="stylesheet" href="./style/reservation.css" />
+  <link rel="stylesheet" href="./css/en.css" />
 
 
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
@@ -88,6 +88,9 @@
 
   <div id="content">
     <div class="container-fluid">
+      <div id="reservation">
+
+     
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2">
           <div class="sidebar-sticky">
@@ -173,6 +176,7 @@
       </div>
     </div>
   </div>
+</div>
   </div>
 
   <!-- Footer -->
