--- a/EN/subscription.html
+++ b/EN/subscription.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html  lang="en">
 
 <head>
   <!-- Required meta tags -->
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <!-- CSS Style -->
 
-  <link rel="stylesheet" href="./style/subscription.css" />
+  <link rel="stylesheet" href="./css/en.css" />
 
 
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
@@ -87,6 +87,7 @@
 
   <div id="content">
     <div class="container-fluid">
+      <div id="subscription">
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2">
           <div class="sidebar-sticky">
@@ -176,6 +177,7 @@
 
       </div>
     </div>
+  </div>
   </div>
   </div>
 
