--- a/AR/blog.html
+++ b/AR/blog.html
@@ -5,19 +5,21 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/index.css" />
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+
   <!-- CSS Style -->
+  <link rel="stylesheet" href="./css/ar.css" />
 
-  <link rel="stylesheet" href="./style/blog.css" />
-  
-
+  <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
+
   <title>Beehive</title>
 </head>
 
@@ -67,10 +69,11 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <i aria-hidden="true" class="fas fa-times"></i>
           </button>
+
           <img src="./img/logo2.png" alt="logo" />
           <h1>تسجيل الدخول</h1>
 
-          <form>
+          <form dir=rtl>
             <div class="form-group">
 
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -102,6 +105,9 @@
 
   <div id="content">
     <div class="container-fluid">
+      <div id="blog">
+
+      
       <div class="row">
 
         <div class="col-12 mx-sm-auto content">
@@ -166,6 +172,7 @@
 
       </div>
     </div>
+  </div>
   </div>
   </div>
 
