--- a/AR/reservationDetails.html
+++ b/AR/reservationDetails.html
@@ -5,17 +5,21 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/index.css" />
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-  <!-- CSS Style -->
- 
-  <link rel="stylesheet" href="./style/reservationDetails.css" />
 
+  <!-- CSS Style -->
+  <link rel="stylesheet" href="./css/ar.css" />
+
+  <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
+
   <title>Beehive</title>
 </head>
 
@@ -68,7 +72,7 @@
           <img src="./img/logo2.png" alt="logo" />
           <h1>تسجيل الدخول</h1>
 
-          <form>
+          <form dir="rtl">
             <div class="form-group">
 
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -100,6 +104,9 @@
 
   <div id="content">
     <div class="container-fluid">
+      <div id="reservationDetails">
+
+   
       <div class="row resDetailsContainer ">
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 ">
           <div class="sidebar-sticky">
@@ -234,6 +241,7 @@
 
       </div>
     </div>
+  </div>
   </div>
   </div>
 
