--- a/AR/subscription.html
+++ b/AR/subscription.html
@@ -5,18 +5,21 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/index.css" />
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+
   <!-- CSS Style -->
- 
-  <link rel="stylesheet" href="./style/subscription.css" />
+  <link rel="stylesheet" href="./css/ar.css" />
 
-
+  <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
+
   <title>Beehive</title>
 </head>
 
@@ -67,7 +70,7 @@
         <img src="./img/logo2.png" alt="logo"/> 
         <h1>تسجيل الدخول</h1>
   
-        <form>
+        <form dir="rtl">
           <div class="form-group">
            
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="البريد الإلكتروني">
@@ -97,6 +100,9 @@
 
   <div id="content">
     <div class="container-fluid">
+      <div id="subscription">
+
+    
       <div class="row subscriptionContainer">
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2 ">
           <div class="sidebar-sticky">
@@ -186,6 +192,7 @@
 
       </div>
     </div>
+  </div>
   </div>
   </div>
 
