--- a/EN/subscriptionConfirm.html
+++ b/EN/subscriptionConfirm.html
@@ -12,8 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <!-- CSS Style -->
- 
-    <link rel="stylesheet" href="./style/subscriptionConfirm.css" />
+    <link rel="stylesheet" href="./css/en.css" />
 
 
     <script src="https://kit.fontawesome.com/7d85ced938.js"></script>
@@ -88,6 +87,9 @@
 
     <div id="content">
         <div class="container-fluid">
+            <div id="subscriptionConfirm">
+
+          
             <div class="row">
                 <div class="col-md-12 col-xs-12 col-sm-12 col-lg-2">
                     <div class="sidebar-sticky">
@@ -189,6 +191,7 @@
 
             </div>
         </div>
+    </div>
     </div>
     </div>
 
